--- a/theme/journal/index.html
+++ b/theme/journal/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <title>Net Journal</title>
   <link rel="stylesheet" href="https://crazypeace.github.io/Url-Shorten-Worker/styles.css">
-  <!-- 如果使用CDN资源就放开这一句, 把上面那一句注释掉
+  <!-- 如果使用CDN資源就放開這一句, 把上面那一句註解掉
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/crazypeace/Url-Shorten-Worker/styles.css">
   -->
 </head>
@@ -28,19 +28,19 @@
     </div>
 
     <div class="card shadow m-3">
-      <h5 class="card-header">短链系统变身日记本NetJournal</h5>
+      <h5 class="card-header">短鏈系統變身日記本NetJournal</h5>
       <div class="card-body">
         <h5 class="card-title"> </h5>
 
         <div class="input-group mb-3">
-          <label>记事本内容 Value</label>
+          <label>記事本內容 Value</label>
           <form class="input-group mb-3">
-            <textarea class="form-control" id="longURL" placeholder="输入文本 Input MarkDown" oninput="loadUrlList()"></textarea>
+            <textarea class="form-control" id="longURL" placeholder="輸入文字 Input MarkDown" oninput="loadUrlList()"></textarea>
           </form>
         </div>
 
         <div class="input-group mb-3">
-            <span class="input-group-text" id="basic-addon2">记事本密码 Key</span>
+            <span class="input-group-text" id="basic-addon2">記事本密碼 Key</span>
           <input type="text" class="form-control" id="keyPhrase" aria-describedby="basic-addon2" placeholder="">
         </div>
 
@@ -49,7 +49,7 @@
         </div>
 
         <div class="input-group mb-3">
-          <span class="input-group-text" id="basic-addon3">本系统密码 Password</span>
+          <span class="input-group-text" id="basic-addon3">本系統密碼 Password</span>
           <input class="form-control" type="text" value="__PASSWORD__" readonly="true" id="passwordText" aria-describedby="basic-addon3">
         </div>
 
@@ -130,11 +130,11 @@
   <script src="https://cdn.jsdelivr.net/gh/lrsjng/jquery-qrcode@0.18.0/dist/jquery-qrcode.min.js" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
   <script src="https://crazypeace.github.io/Url-Shorten-Worker/main.js" crossorigin="anonymous"></script>
-  <!-- 如果使用CDN资源就放开这一句, 把上面那一句注释掉
+  <!-- 如果使用CDN資源就放開這一句, 把上面那一句註解掉
     <script src="https://cdn.jsdelivr.net/gh/crazypeace/Url-Shorten-Worker/main.js" crossorigin="anonymous"></script>
   -->
   <script>
-    // 把MarkDown文本转换为显示
+    // 把MarkDown文本轉換為顯示
     function syncMarkDownView() {
       const markdownContent = document.getElementById('longURL').value;
       const htmlPreview = document.getElementById('html-preview');
@@ -149,7 +149,7 @@
       return valueMarkdown
     }
 
-    // 函数变量的定义和使用请见main.js
+    // 函數變數的定義與使用請見main.js
     buildValueItemFunc = buildValueMarkdown
   </script>
 </body>
