Update result.html to traditional Chinese

--- a/theme/journal/result.html
+++ b/theme/journal/result.html
@@ -15,7 +15,7 @@
 	<script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 
 	<script>
-		// 把MarkDown文本转换为显示
+		// 把MarkDown文字轉換為顯示
 		function syncMarkDownView() {
 			const markdownContent = document.getElementById('longURL').value;
 			const htmlPreview = document.getElementById('html-preview');
