--- a/theme/journal/result.html
+++ b/theme/journal/result.html
@@ -16,7 +16,7 @@
 
     <script>
         // 設定正確的密碼
-        const correctPassword = "your_password"; // 將這裡的 "your_password" 改為你想要的密碼
+        const correctPassword = "980912"; // 將這裡的 "your_password" 改為你想要的密碼
 
         // 要求用戶輸入密碼
         function askForPassword() {
