--- a/theme/journal/index.html
+++ b/theme/journal/index.html
@@ -67,19 +67,13 @@
         <div id="urlList" class="list-group"></div>
       </div>
     </div>
-
-    <div class="card mb-3 shadow-sm">
-      <h5 class="card-header bg-secondary text-white">如何使用</h5>
-      <div class="card-body text-center">
-        <a href="https://www.youtube.com/watch?v=Ra6SXZFeGM8" target="_blank" class="btn btn-secondary w-100">觀看使用教學</a>
-      </div>
-    </div>
   </div>
 
   <div class="container my-5">
     <h1 class="text-center mb-4">短鏈系統變身日記本 <em>Net Journal</em></h1>
     <div class="row gy-3">
 
+      <!-- Load 1 KV 卡片 -->
       <div class="col-12 col-md-6 col-lg-4">
         <div class="card shadow-sm h-100">
           <h5 class="card-header bg-info text-white">Load 1 KV</h5>
@@ -93,6 +87,7 @@
         </div>
       </div>
 
+      <!-- Net Journal 主卡片 -->
       <div class="col-12 col-md-6 col-lg-4">
         <div class="card shadow-sm h-100">
           <h5 class="card-header bg-primary text-white">Net Journal</h5>
@@ -115,7 +110,11 @@
           </div>
         </div>
       </div>
+    </div>
 
+    <!-- 使用教學 URL 卡片 -->
+    <div class="text-center mt-4">
+      <a href="https://www.youtube.com/watch?v=Ra6SXZFeGM8" target="_blank" class="btn btn-secondary">觀看使用教學</a>
     </div>
   </div>
 
