--- a/theme/journal/index.html
+++ b/theme/journal/index.html
@@ -72,10 +72,10 @@
   <div class="container my-5">
     <h1 class="text-center mb-4">短鏈系統變身日記本 <em>Net Journal</em></h1>
     <div class="row gy-3">
-
+      
       <!-- Load 1 KV 卡片 -->
-      <div class="col-12 col-md-6 col-lg-4">
-        <div class="card shadow-sm h-100">
+      <div class="col-12 col-md-6 offset-md-3">
+        <div class="card shadow-sm">
           <h5 class="card-header bg-info text-white">Load 1 KV</h5>
           <div class="card-body">
             <label for="keyForQuery" class="form-label">Key</label>
@@ -88,8 +88,8 @@
       </div>
 
       <!-- Net Journal 主卡片 -->
-      <div class="col-12 col-md-6 col-lg-4">
-        <div class="card shadow-sm h-100">
+      <div class="col-12 col-md-6 offset-md-3">
+        <div class="card shadow-sm">
           <h5 class="card-header bg-primary text-white">Net Journal</h5>
           <div class="card-body">
             <label for="longURL" class="form-label">記事本內容 Value</label>
